Starting to look at pathfinders with actual control logic, but everything is pushed off my laptop now so I should be able to do more work from home.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,16 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
             "program": "Rebuilding_Everything\\Transducer_homing.py",
             "console": "integratedTerminal"
         }
     ]
 }
- 
