Wooo UI overhaul is pretty complete, and I even made it so I don't need to launch the server separately. Next I work on getting IO to be nice so I don't have to hardcode the resolution of the fullscan module :)))))

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "justMyCode": true
         },
         {
-            "name": "Python: Current File",
+            "name": "Python: Target file",
             "type": "python",
             "request": "launch",
             "program": "Transducer_homing.py",
