Got a lot of work done, beginning to figure out the mathematical model for the transducer function, now I'm trying to reverse-engineer the IK parameters of Stanley.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "python.pythonPath": "c:\\Users\\Odonnell_Lab\\AppData\\Local\\Programs\\Python\\Python310\\python.exe"
+    "python.pythonPath": "~\\AppData\\Local\\Programs\\Python\\Python310\\python.exe",
+    "python.autoComplete.extraPaths": ["c:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code\\Debugging Scripts",
+    "c:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code"
+],
+"python.analysis.extraPaths": [
+    "c:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code\\Debugging Scripts",
+    "c:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code"
+]
 }
