--- a/.gitignore
+++ b/.gitignore
@@ -164,7 +164,8 @@ cython_debug/
 #Images
 *.png
 *.jpg
-!fullscan_render_test_4.jpg
+# !fullscan_render_test_4.jpg
+*.vs/
 
 # Annoying Excel autosave files
 ~$*.xlsx
