Local changes on the N415A machine, kinda annoying but here goes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
 "python.analysis.extraPaths": [
     "c:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code\\Debugging Scripts",
     "c:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code"
-]
+],
+"python.analysis.typeCheckingMode": "off"
 }
